--- a/dopplehangar-frontend/public/index.html
+++ b/dopplehangar-frontend/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="DoppleHangar"
-      content="Hackathon Project 2024 - HackMidwest - DoppleHangar"
+      name="DoppelHanger"
+      content="Hackathon Project 2024 - HackMidwest - DoppelHanger"
     />
     <title>DoppleHangar</title>
   </head>
